[package]
name = "greg-nostr-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.25"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
nostr-types = "0.1.3"
nostr_rust = { version = "0.16.2", features = ["async"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18.0"
